# ebpf-short-lived-processes-data-extraction

./: README.md
src/: .gitignore  CMakeLists.txt  build.sh  helperfile.h  test.bpf.c  test.cpp  vmlinux.h
